cmake_minimum_required(VERSION 3.26)
project(CP_Training_Level_2)

set(CMAKE_CXX_STANDARD 14)

#[[add_executable(A "Week 01/A.cpp")
add_executable(D "Week 01/D.cpp")
add_executable(E "Week 01/E.cpp")
add_executable(B "Week 02/B.cpp")
add_executable(C "Week 01/C.cpp")
add_executable(F "Week 01/F.cpp")
add_executable(N "Week 01/N.cpp")
add_executable(O "Week 01/O.cpp")
add_executable(P "Week 01/P.cpp")
add_executable(Q "Week 01/Q.cpp")
add_executable(T "Week 01/T.cpp")
add_executable(S "Week 01/S.cpp")
add_executable(R "Week 01/R.cpp")
add_executable(K "Week 01/K.cpp")
add_executable(L "Week 01/L.cpp")
add_executable(H "Week 01/H.cpp")
add_executable(J "Week 01/J Not Solved Yet .cpp")
add_executable(I "Week 01/I.cpp")
add_executable(G "Week 01/G.cpp")
add_executable(M "Week 01/M.cpp")]]


add_executable(A "Contest #0/A.cpp")
add_executable(B "Contest #0/B.cpp")
add_executable(C "Contest #0/C.cpp")
add_executable(D "Contest #0/D.cpp")
add_executable(E "Contest #0/E.cpp")
add_executable(F "Contest #0/F.cpp")


#[[add_executable(A "Week 02/A.cpp")
add_executable(B "Week 02/B.cpp")
add_executable(C "Week 02/C.cpp")
add_executable(D "Week 02/D.cpp")
add_executable(E "Week 02/E.cpp")
add_executable(F "Week 02/F.cpp")
add_executable(G "Week 02/G.cpp")
add_executable(TST "Week 02/TST.cpp")]]
